Modificacion de Titulo

--- a/Mostrar_Alumno.html
+++ b/Mostrar_Alumno.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Alunmos</title>
+    <title>Alumnos</title>
     <link rel="stylesheet" href="css/styles.css">
     <script>
         function myCanvas(imagen, canvas) {
