--- a/index.html
+++ b/index.html
@@ -1,29 +1,74 @@
 <!DOCTYPE html>
+
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <center>
-        <h1>Universidad Nacional de Caaguazú</h1>
-        <h1>FACULTAD DE CIENCIAS Y TECNOLOGIAS</h1>
-        <h1>Practicas Programacion WEB</h1>
-        <table border="1">
-            <tr>
-                <td><a href="index.html">Inicio</a></td>
-                <td><a href="Tabla_Multiplicar.html">Practica 1</a></td>
-                <td><a href="Formulario_alumno.html">Practica 2</a></td>
-                <td><a href="Mostrar_Alumno.html">Practica 3</a></td>
-                <td><a href="Contador.html">Practica 4</a></td>
-            </tr>
-        </table>
-        <br>
-        <img src="imagenes/img.jpg" alt="Cargando">
-        <br>
-        <table border="1">
-            <tr>
-                <td rowspan="5">Creado por: Carlos Jein Coronel Rojas</td>
-            </tr>
-        </table>
-    </center>
+    <section class="contenido-index" id="contenido-index">
+        <div>
+            <h1>Universidad Nacional de Caaguazú</h1>
+            <h1>FACULTAD DE CIENCIAS Y TECNOLOGIAS</h1>
+            <h1>Programacion WEB</h1>
+        </div>
+        <div class="indexCont">
+            <table>
+                <tr>
+                    <td colspan="5">
+                        <h3>Tarea Nº1</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td><h3>1</h3></td>
+                    <td><h3>2</h3></td>
+                    <td><h3>3</h3></td>
+                    <td><h3>4</h3></td>
+                </tr>
+                <tr>
+                    <td><a href="Tabla_Multiplicar.html"><img src="./imagenes/LogoHtml5.jpg"
+                                style="width:42px;height:42px;"></a></td>
+                    <td><a href="Formulario_alumno.html"><img src="./imagenes/LogoHtml5.jpg"
+                                style="width:42px;height:42px;"></a></td>
+                    <td><a href="Mostrar_Alumno.html"><img src="./imagenes/LogoHtml5.jpg"
+                                style="width:42px;height:42px;"></a></td>
+                    <td><a href="Contador/Contador.html"><img src="./imagenes/LogoHtml5.jpg"
+                                style="width:42px;height:42px;"></a></td>
+
+                </tr>
+                <tr>
+                    <td colspan="5">
+                        <h3>Tarea Nº2</h3>
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td><a href="Playlist.html"><img src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    </td>
+                    <td><a href="Music.html"><img src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    </td>
+                    <td><a href="TablaVideos.html"><img src="./imagenes/LogoHtml5.jpg"
+                                style="width:42px;height:42px;"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><h3>1</h3></td>
+                    <td><h3>2</h3></td>
+                    <td><h3>3</h3></td>
+                </tr>
+            </table>
+            <br>
+            <img src="imagenes/Logo.png" alt="Cargando">
+            <br>
+            <table>
+                <tr>
+                    <td rowspan="5">
+                        <h3>Creado por: Carlos Jein Coronel Rojas</h3>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
 </body>
 </html>
