--- a/Formulario_alumno.html
+++ b/Formulario_alumno.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Formulario Alumno</title>
+    <link rel="stylesheet" href="css/form.css">
 </head>
 
 <body>
@@ -11,14 +12,14 @@
             var reg_2 = document.getElementById("apellido");
             var reg_3 = document.getElementById("edad");
             var reg_4 = document.getElementById("ciudad");
-            var reg_5="",reg_6="",reg_7="",reg_8="",reg_9="";
+            var reg_5 = "", reg_6 = "", reg_7 = "", reg_8 = "", reg_9 = "";
 
             if (document.getElementById("r_publico").checked) {
                 reg_5 = document.getElementById("r_publico").value;
             }
             if (document.getElementById("r_privado").checked) {
                 reg_5 = document.getElementById("r_privado").value;
-            }            
+            }
             if (document.getElementById('carnet').checked) {
                 reg_6 = document.getElementById("carnet").value;
             }
@@ -34,59 +35,81 @@
             document.write(
                 "<table cellpadding='5' cellspacing='0' border='1'>" +
                 "<tr> <td>Nombre</td> <td>Apellido</td> <td>Edad</td> <td>Ciudad</td> <td>Colegio</td> <td>Documentos</td> </tr>" +
-                "<tr> <td>" + reg_1.value + "</td> <td>" + reg_2.value + "</td> <td>" + reg_3.value + "</td> <td>" + reg_4.value + "</td> <td>" + reg_5 + "</td>"+
-                "<td ><ul style='list-style-type:none;'><li>"+reg_6+"</li><li>"+reg_7+"</li><li>"+reg_8+"</li><li>"+reg_9+"</li></ul></td></tr></table>"
+                "<tr> <td>" + reg_1.value + "</td> <td>" + reg_2.value + "</td> <td>" + reg_3.value + "</td> <td>" + reg_4.value + "</td> <td>" + reg_5 + "</td>" +
+                "<td ><ul style='list-style-type:none;'><li>" + reg_6 + "</li><li>" + reg_7 + "</li><li>" + reg_8 + "</li><li>" + reg_9 + "</li></ul></td></tr></table>"
             );
         }
     </script>
-    <form id="myForm">
-        <h1>Formulario</h1>
-        <label>Nombre:</label>
-        <input type="text" name="txtNombre" id="nombre">
-        <br>
-        <br>
-        <label>Apellido:</label>
-        <input type="text" name="txtApellido" id="apellido">
-        <br>
-        <br>
-        <label>Edad:</label>
-        <input type="text" name="txtEdad" id="edad">
-        <br>
-        <br>
-        <label>Ciudad</label>
-        <select name="ciudades" id="ciudad">
-            <option value="Villarica"> Villarica</option>
-            <option value="Asuncion">Asuncion</option>
-            <option value="Coronel Oviedo" selected>Coronel Oviedo</option>
-            <option value="Paraguari">Paraguari</option>
-            <option value="Campo 9">Campo 9</option>
-        </select>
-        <br>
-        <label>Colegio de procedencia:</label>
-        <br>
-        <input type="radio" name="txtColegio" id="r_publico" value="Publico">
-        <label>Publico</label>
-        <br>
-        <input type="radio" name="txtColegio" id="r_privado" value="Privado">
-        <label>Privado</label>
-        <br>
-        <label>Documentos Presentados</label>
-        <br>
-        <input type="checkbox" id="carnet" name="doc1" value="Foto tipo carnet">
-        <Label>Foto tipo carnet</Label>
-        <br>
-        <input type="checkbox" id="ci" name="doc2" value="Fotocopia de CI">
-        <Label> Fotocopia de CI</Label>
-        <br>
-        <input type="checkbox" id="actaNacimiento" name="doc3" value="Acta de nacimiento">
-        <Label>Acta de nacimiento</Label>
-        <br>
-        <input type="checkbox" id="certificadoEstudio" name="doc4" value="Certificao de estudio">
-        <Label>Certificao de estudio</Label>
-        <br>
-        <input type="reset" name="restablecer" value="Cancelar">
-        <input type="button" onclick="mostrar()" value="Cargar" />
-    </form>
+    <div class="contact_form">
+        <form id="myForm">
+            <h1>Formulario</h1>
+            <label>Nombre:</label>
+            <input type="text" name="txtNombre" id="nombre">
+            <br>
+            <br>
+            <label>Apellido:</label>
+            <input type="text" name="txtApellido" id="apellido">
+            <br>
+            <br>
+            <label>Edad:</label>
+            <input type="text" name="txtEdad" id="edad">
+            <br>
+            <br>
+            <label>Ciudad</label>
+            <select name="ciudades" id="ciudad">
+                <option value="Villarica"> Villarica</option>
+                <option value="Asuncion">Asuncion</option>
+                <option value="Coronel Oviedo" selected>Coronel Oviedo</option>
+                <option value="Paraguari">Paraguari</option>
+                <option value="Campo 9">Campo 9</option>
+            </select>
+
+            <h3>Colegio de procedencia:</h3>
+            <table>
+                <tbody>
+                    <tr>
+                        <td><label>Publico</label></td>
+                        <td> <input type="radio" name="txtColegio" id="r_publico" value="Publico"></td>
+                    </tr>
+                    <tr>
+                        <td> <label>Privado</label></td>
+                        <td><input type="radio" name="txtColegio" id="r_privado" value="Privado"></td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <h3>Documentos Presentados</h3>
+            <table>
+                <tbody>
+                    <tr>
+                        <td><input type="checkbox" id="carnet" name="doc1" value="Foto tipo carnet"></td>
+                        <td> <Label>Foto tipo carnet</Label> </td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" id="carnet" name="doc1" value="Foto tipo carnet"></td>
+                        <td><Label>Foto tipo carnet</Label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" id="ci" name="doc2" value="Fotocopia de CI"></td>
+                        <td> <Label> Fotocopia de CI</Label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" id="actaNacimiento" name="doc3" value="Acta de nacimiento"></td>
+                        <td><Label>Acta de nacimiento</Label></td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" id="certificadoEstudio" name="doc4" value="Certificao de estudio">
+                        </td>
+                        <td><Label>Certificao de estudio</Label></td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <input type="reset" name="restablecer" value="Cancelar">
+            <input type="button" onclick="mostrar()" value="Cargar" />
+        </form>
+    </div>
+
 </body>
 
 </html>
