--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="es">
 
 <head>
     <title>Document</title>
@@ -15,47 +16,64 @@
         <div class="indexCont">
             <table>
                 <tr>
-                    <td colspan="5">
+                    <td colspan="4">
                         <h3>Tarea Nº1</h3>
                     </td>
                 </tr>
                 <tr>
-                    <td><h3>1</h3></td>
-                    <td><h3>2</h3></td>
-                    <td><h3>3</h3></td>
-                    <td><h3>4</h3></td>
-                </tr>
-                <tr>
-                    <td><a href="Tabla_Multiplicar.html"><img src="./imagenes/LogoHtml5.jpg"
-                                style="width:42px;height:42px;"></a></td>
-                    <td><a href="Formulario_alumno.html"><img src="./imagenes/LogoHtml5.jpg"
-                                style="width:42px;height:42px;"></a></td>
-                    <td><a href="Mostrar_Alumno.html"><img src="./imagenes/LogoHtml5.jpg"
-                                style="width:42px;height:42px;"></a></td>
-                    <td><a href="Contador/Contador.html"><img src="./imagenes/LogoHtml5.jpg"
-                                style="width:42px;height:42px;"></a></td>
-
-                </tr>
-                <tr>
-                    <td colspan="5">
-                        <h3>Tarea Nº2</h3>
+                    <td>
+                        <h3>1</h3>
                     </td>
+                    <td>
+                        <h3>2</h3>
+                    </td>
+                    <td>
+                        <h3>3</h3>
+                    </td>
+                    <td>
+                        <h3>4</h3>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td><a href="Tabla_Multiplicar.html"><img alt="boton para acceder a la tabla de multiplicar"
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
+                    <td><a href="Formulario_alumno.html"><img alt="boton para acceder a la tabla de Formulario alumnos"
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
+                    <td><a href="Mostrar_Alumno.html"><img alt="boton para acceder a la tabla de mostrar alumnos"
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
+                    <td><a href="Contador/Contador.html"><img alt='Boton para acceder al contador'
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
+
                 </tr>
             </table>
             <table>
                 <tr>
-                    <td><a href="Playlist.html"><img src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
-                    </td>
-                    <td><a href="Music.html"><img src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
-                    </td>
-                    <td><a href="TablaVideos.html"><img src="./imagenes/LogoHtml5.jpg"
-                                style="width:42px;height:42px;"></a>
+                    <td colspan="3">
+                        <h3>Tarea Nº2</h3>
                     </td>
                 </tr>
                 <tr>
-                    <td><h3>1</h3></td>
-                    <td><h3>2</h3></td>
-                    <td><h3>3</h3></td>
+                    <td><a href="Playlist.html"><img alt='boton para acceder a la playlist '
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    </td>
+                    <td><a href="Music.html"><img alt='boton para acceder a la seccion de musica'
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    </td>
+                    <td><a href="TablaVideos.html"><img alt=" boton para acceder ala tabla videos de youtube "
+                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h3>1</h3>
+                    </td>
+                    <td>
+                        <h3>2</h3>
+                    </td>
+                    <td>
+                        <h3>3</h3>
+                    </td>
                 </tr>
             </table>
             <br>
@@ -63,7 +81,7 @@
             <br>
             <table>
                 <tr>
-                    <td rowspan="5">
+                    <td>
                         <h3>Creado por: Carlos Jein Coronel Rojas</h3>
                     </td>
                 </tr>
@@ -71,4 +89,5 @@
         </div>
     </section>
 </body>
+
 </html>
