--- a/TablaVideos.html
+++ b/TablaVideos.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/tabla.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="Gallery-Youtube">
     <h2 style="font-size: 3rem; text-align: center"> YouTube Gallery</h2>
     <table style="border: 10px black solid; margin: 0 auto;">
         <tbody>
