--- a/Contador/Contador.html
+++ b/Contador/Contador.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Contador</title>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 
 <body>
