--- a/Music.html
+++ b/Music.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/music.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
