--- a/Playlist.html
+++ b/Playlist.html
@@ -2,10 +2,18 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="css/videos.css">
+    <style>
+        * {
+            margin: 10px;
+            padding: 0;
+            box-sizing: border-box;
+            font-weight: bold;
+        }
+    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body class="playList">
 
     <script>
         function openFullscreen(idvideo) {
@@ -13,10 +21,10 @@
             if (elem.requestFullscreen) {
                 elem.requestFullscreen();
             }
-            if (elem.pause){
+            if (elem.pause) {
                 elem.play();
             }
-                
+
         }
     </script>
 
@@ -30,19 +38,21 @@
             </div>
         </div>
 
-        <div class=" cont-list">
+        <div class="cont-list-videos">
                     <div class="video-list">
-                        <video id="myvideo1" src="media/videos/y2mate.com_1.mp4" controls ></video>
+                        <video id="myvideo1" src="media/videos/y2mate.com_1.mp4" controls></video>
                         <div style="display: flex;">
                             <h3 class="title-video"> 0.1 Tutorial React 1</h3>
-                            <button onclick="openFullscreen('myvideo1');">Play</button>
+                            <button class="boton-styled" onclick="openFullscreen('myvideo1');">Play</button
+                                class="boton-styled">
                         </div>
                     </div>
                     <div class="video-list">
                         <video id="myvideo2" src="media/videos/y2mate.com_2.mp4" controls></video>
                         <div style="display: flex;">
                             <h3 class="title-video"> 0.2 Tutorial React 2</h3>
-                            <button onclick="openFullscreen('myvideo2');">Play</button>
+                            <button class="boton-styled" onclick="openFullscreen('myvideo2');">Play</button
+                                class="boton-styled">
                         </div>
 
                     </div>
@@ -50,21 +60,24 @@
                         <video id="myvideo3" src="media/videos/y2mate.com_3.mp4" controls></video>
                         <div style="display: flex;">
                             <h3 class="title-video"> 0.2 Tutorial React 3</h3>
-                            <button onclick="openFullscreen('myvideo3');">Play</button>
+                            <button class="boton-styled" onclick="openFullscreen('myvideo3');">Play</button
+                                class="boton-styled">
                         </div>
                     </div>
                     <div class="video-list">
                         <video id="myvideo4" src="media/videos/y2mate.com_4.mp4" controls></video>
                         <div style="display: flex;">
                             <h3 class="title-video"> 0.2 Tutorial React 4</h3>
-                            <button onclick="openFullscreen('myvideo4');">Play</button>
+                            <button class="boton-styled" onclick="openFullscreen('myvideo4');">Play</button
+                                class="boton-styled">
                         </div>
                     </div>
                     <div class="video-list">
                         <video id="myvideo5" src="media/videos/y2mate.com_5.mp4" controls></video>
                         <div style="display: flex;">
                             <h3 class="title-video"> 0.2 Tutorial React 5</h3>
-                            <button onclick="openFullscreen('myvideo5');">Play</button>
+                            <button class="boton-styled" onclick="openFullscreen('myvideo5');">Play</button
+                                class="boton-styled">
                         </div>
                     </div>
             </div>
