--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 </tr>
 
                 <tr>
-                    <td><a href="Tabla_Multiplicar.html"><img alt="boton para acceder a la tabla de multiplicar"
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
-                    <td><a href="Formulario_alumno.html"><img alt="boton para acceder a la tabla de Formulario alumnos"
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
-                    <td><a href="Mostrar_Alumno.html"><img alt="boton para acceder a la tabla de mostrar alumnos"
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
-                    <td><a href="Contador/Contador.html"><img alt='Boton para acceder al contador'
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a></td>
+                    <td><a href="Tabla_Multiplicar.html"><img id="boton-contenedor"
+                                alt="boton para la tabla de multiplicar" src="./imagenes/music.webp"></a></td>
+                    <td><a href="Formulario_alumno.html"><img id="boton-contenedor"
+                                alt="boton para la tabla de Formulario alumnos" src="./imagenes/music.webp"></a></td>
+                    <td><a href="Mostrar_Alumno.html"><img id="boton-contenedor"
+                                alt="boton para la tabla de mostrar alumnos" src="./imagenes/music.webp"></a></td>
+                    <td><a href="Contador/Contador.html"><img id="boton-contenedor" alt='Boton para el contador'
+                                src="./imagenes/music.webp"></a></td>
 
                 </tr>
             </table>
@@ -54,14 +54,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="Playlist.html"><img alt='boton para acceder a la playlist '
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    <td><a href="Playlist.html"><img id="boton-contenedor" alt='boton para playlist '
+                                src="./imagenes/music.webp"></a>
                     </td>
-                    <td><a href="Music.html"><img alt='boton para acceder a la seccion de musica'
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    <td><a href="Music.html"><img id="boton-contenedor" alt='boton para la seccion de musica'
+                                src="./imagenes/music.webp"></a>
                     </td>
-                    <td><a href="TablaVideos.html"><img alt=" boton para acceder ala tabla videos de youtube "
-                                src="./imagenes/LogoHtml5.jpg" style="width:42px;height:42px;"></a>
+                    <td><a href="TablaVideos.html"><img id="boton-contenedor"
+                                alt=" boton para la tabla de videos de youtube " src="./imagenes/music.webp"></a>
                     </td>
                 </tr>
                 <tr>
@@ -76,17 +76,11 @@
                     </td>
                 </tr>
             </table>
-            <br>
-            <img src="imagenes/Logo.png" alt="Cargando">
-            <br>
-            <table>
-                <tr>
-                    <td>
-                        <h3>Creado por: Carlos Jein Coronel Rojas</h3>
-                    </td>
-                </tr>
-            </table>
         </div>
+        <br>
+        <img src="imagenes/Logo.png" alt="Cargando">
+        <br>
+        <h3>Creado por: Carlos Jein Coronel Rojas</h3>
     </section>
 </body>
 
